<resources>
    <string name="app_name">Demo 3ANDM</string>
    <string name="action_settings">Settings</string>
    <string name="content_hello_world">Hello 3ANDM!</string>
    <string name="add_user">Add User</string>
    <string name="user_add_first_name">Enter First Name</string>
    <string name="user_add_last_name">Enter Last Name</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="user_add_gender">Gender</string>
    <string name="user_add_country">Country</string>
    <string name="action_add">New student</string>
    <string name="name">Name :</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="action_recipes">Recipes</string>
    <string name="action_reciperetrofit">Recipes retrofit</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="recipes_list">
        <item>beef cube steak</item>
        <item>onion, sliced into thin rings</item>
        <item>green bell pepper, sliced in rings</item>
        <item>Italian seasoned bread crumbs</item>
        <item>grated Parmesan cheese</item>
        <item>olive oil</item>
        <item>spaghetti sauce</item>
        <item>shredded mozzarella cheese</item>
        <item>angel hair pasta</item>
        <item>minced garlic</item>
        <item>baking powder</item>
        <item>vanilla extrac</item>
        <item>Italian seasoning</item>
        <item>crushed red pepper flakes</item>
        <item>crushed tomatoes</item>
        <item>minced clams, with juice</item>
        <item>small salad shrimp</item>
        <item>ground black pepper</item>
        <item>chilled unsalted butter</item>
    </string-array>
</resources>
